方案之1 解決最底篇文章 border-bottom  width問題

--- a/source/index.html
+++ b/source/index.html
@@ -17,6 +17,8 @@ layout: default
   {% endif %}
 </aside>
 
+<div class="fakeplace"></div>
+
 <nav id="pagenavi" role="navigation">
     {% if paginator.previous_page %}
         <a href="{{paginator.previous_page}}" class="prev">Prev</a>
